// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WidgetDiff renders a widget in the diff view 1`] = `
<div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              options: 
              <span
                class="inner-value dark "
              />
            </div>
          </div>
          <div
            class="diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              options: 
              <span
                class="inner-value dark "
              />
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                choices: 
                <span
                  class="inner-value dark "
                />
              </div>
            </div>
            <div
              class="diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                choices: 
                <span
                  class="inner-value dark "
                />
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="diff-row before"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  0: 
                  <span
                    class="inner-value dark "
                  />
                </div>
              </div>
              <div
                class="diff-row after"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  0: 
                  <span
                    class="inner-value dark "
                  />
                </div>
              </div>
            </div>
            <div
              style="clear: both;"
            >
              <div
                class="diff-row collapsed before"
              >
                <div
                  style="padding-block-start: var(--wb-sizing-size_040); padding-block-end: var(--wb-sizing-size_040); padding-inline-start: 60px;"
                >
                  <button
                    aria-disabled="false"
                    data-kind="secondary"
                    data-style-active="background: var(--wb-semanticColor-action-secondary-neutral-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-neutral-press-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border);"
                    data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
                    data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                    data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                    data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                    data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-neutral-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-neutral-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border);"
                    data-style-moz-focus-inner="border: 0px;"
                    style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-small); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-small); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-neutral-default-border); background: var(--wb-semanticColor-action-secondary-neutral-default-background); color: var(--wb-semanticColor-action-secondary-neutral-default-foreground); transition: border-radius 0.1s ease-in-out;"
                    type="button"
                  >
                    <span
                      style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-small); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-small); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
                    >
                      show unmodified
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="diff-row collapsed after"
              >
                <div
                  style="padding-block-start: var(--wb-sizing-size_040); padding-block-end: var(--wb-sizing-size_040); padding-inline-start: 60px;"
                >
                  <button
                    aria-disabled="false"
                    data-kind="secondary"
                    data-style-active="background: var(--wb-semanticColor-action-secondary-neutral-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-neutral-press-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border);"
                    data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
                    data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                    data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                    data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
                    data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-neutral-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-neutral-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border);"
                    data-style-moz-focus-inner="border: 0px;"
                    style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-small); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-small); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-neutral-default-border); background: var(--wb-semanticColor-action-secondary-neutral-default-background); color: var(--wb-semanticColor-action-secondary-neutral-default-foreground); transition: border-radius 0.1s ease-in-out;"
                    type="button"
                  >
                    <span
                      style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-small); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-small); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
                    >
                      show unmodified
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="diff-row before"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  1: 
                  <span
                    class="inner-value dark "
                  />
                </div>
              </div>
              <div
                class="diff-row after"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  1: 
                  <span
                    class="inner-value dark "
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    id: 
                    <span
                      class="inner-value dark "
                    >
                      "1-1-1-1-1"
                    </span>
                  </div>
                </div>
                <div
                  class="diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    id: 
                    <span
                      class="inner-value dark "
                    >
                      "1-1-1-1-1"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    content: 
                    <span
                      class="inner-value dark removed"
                    >
                      "$42$"
                    </span>
                  </div>
                </div>
                <div
                  class="added diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    content: 
                    <span
                      class="inner-value dark added"
                    >
                      "$15$"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    correct: 
                    <span
                      class="inner-value dark removed"
                    >
                      false
                    </span>
                  </div>
                </div>
                <div
                  class="added diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    correct: 
                    <span
                      class="inner-value dark added"
                    >
                      true
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="clear: both;"
      >
        <div
          class="diff-row collapsed before"
        >
          <div
            style="padding-block-start: var(--wb-sizing-size_040); padding-block-end: var(--wb-sizing-size_040); padding-inline-start: 0;"
          >
            <button
              aria-disabled="false"
              data-kind="secondary"
              data-style-active="background: var(--wb-semanticColor-action-secondary-neutral-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-neutral-press-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border);"
              data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
              data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-neutral-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-neutral-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border);"
              data-style-moz-focus-inner="border: 0px;"
              style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-small); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-small); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-neutral-default-border); background: var(--wb-semanticColor-action-secondary-neutral-default-background); color: var(--wb-semanticColor-action-secondary-neutral-default-foreground); transition: border-radius 0.1s ease-in-out;"
              type="button"
            >
              <span
                style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-small); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-small); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
              >
                show unmodified
              </span>
            </button>
          </div>
        </div>
        <div
          class="diff-row collapsed after"
        >
          <div
            style="padding-block-start: var(--wb-sizing-size_040); padding-block-end: var(--wb-sizing-size_040); padding-inline-start: 0;"
          >
            <button
              aria-disabled="false"
              data-kind="secondary"
              data-style-active="background: var(--wb-semanticColor-action-secondary-neutral-press-background); border-radius: var(--wb-c-button-root-border-radius-press); color: var(--wb-semanticColor-action-secondary-neutral-press-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-press-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border);"
              data-style-focus="-webkit-tap-highlight-color: rgba(0,0,0,0);"
              data-style-focus-visible="box-shadow: 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-focus-visible-active="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-press) var(--wb-semanticColor-action-secondary-neutral-press-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-focus-visible-hover="box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border), 0 0 0 var(--wb-border-width-medium) var(--wb-semanticColor-focus-inner); outline: var(--wb-border-width-medium) solid var(--wb-semanticColor-focus-outer); outline-offset: var(--wb-border-width-medium);"
              data-style-media-hover-hover-hover="background: var(--wb-semanticColor-action-secondary-neutral-hover-background); border-radius: var(--wb-c-button-root-border-radius-hover); color: var(--wb-semanticColor-action-secondary-neutral-hover-foreground); border-color: var(--wb-semanticColor-action-secondary-neutral-hover-border); box-shadow: inset 0 0 0 var(--wb-c-button-root-border-width-secondary-hover) var(--wb-semanticColor-action-secondary-neutral-hover-border);"
              data-style-moz-focus-inner="border: 0px;"
              style="margin: 0px; position: relative; display: inline-flex; align-items: center; justify-content: center; padding: 0px; border: none; cursor: pointer; outline: none; text-decoration: none; box-sizing: border-box; touch-action: manipulation; user-select: none; height: var(--wb-c-button-root-sizing-height-small); padding-block: 0px; border-radius: var(--wb-c-button-root-border-radius-default); padding-inline: var(--wb-c-button-root-layout-padding-inline-secondary-small); border-style: solid; border-width: var(--wb-c-button-root-border-width-secondary-default); border-color: var(--wb-semanticColor-action-secondary-neutral-default-border); background: var(--wb-semanticColor-action-secondary-neutral-default-background); color: var(--wb-semanticColor-action-secondary-neutral-default-foreground); transition: border-radius 0.1s ease-in-out;"
              type="button"
            >
              <span
                style="-webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; display: inline-block; font-family: var(--wb-font-family-sans); margin: 0px; font-size: var(--wb-font-body-size-small); font-weight: var(--wb-c-button-root-font-weight-default); line-height: var(--wb-c-button-root-font-lineHeight-small); align-items: center; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; pointer-events: none;"
              >
                show unmodified
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WidgetDiff renders with both 'before' and 'after' undefined 1`] = `
<div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div />
  </div>
</div>
`;

exports[`WidgetDiff renders with missing 'after' props 1`] = `
<div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              type: 
              <span
                class="inner-value dark removed dark"
              >
                "radio"
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              graded: 
              <span
                class="inner-value dark removed dark"
              >
                true
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              version: 
              <span
                class="inner-value dark removed dark"
              />
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="removed dark diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                major: 
                <span
                  class="inner-value dark removed dark"
                >
                  0
                </span>
              </div>
            </div>
            <div
              class="blank-space diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="removed dark diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                minor: 
                <span
                  class="inner-value dark removed dark"
                >
                  0
                </span>
              </div>
            </div>
            <div
              class="blank-space diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              static: 
              <span
                class="inner-value dark removed dark"
              >
                false
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              alignment: 
              <span
                class="inner-value dark removed dark"
              >
                "default"
              </span>
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="removed dark diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              options: 
              <span
                class="inner-value dark removed dark"
              />
            </div>
          </div>
          <div
            class="blank-space diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="removed dark diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                choices: 
                <span
                  class="inner-value dark removed dark"
                />
              </div>
            </div>
            <div
              class="blank-space diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  0: 
                  <span
                    class="inner-value dark removed dark"
                  />
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    id: 
                    <span
                      class="inner-value dark removed dark"
                    >
                      "0-0-0-0-0"
                    </span>
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    content: 
                    <span
                      class="inner-value dark removed dark"
                    >
                      "$45$"
                    </span>
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    correct: 
                    <span
                      class="inner-value dark removed dark"
                    >
                      false
                    </span>
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="removed dark diff-row before"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  1: 
                  <span
                    class="inner-value dark removed dark"
                  />
                </div>
              </div>
              <div
                class="blank-space diff-row after"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    id: 
                    <span
                      class="inner-value dark removed dark"
                    >
                      "1-1-1-1-1"
                    </span>
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    content: 
                    <span
                      class="inner-value dark removed dark"
                    >
                      "$42$"
                    </span>
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="removed dark diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    correct: 
                    <span
                      class="inner-value dark removed dark"
                    >
                      false
                    </span>
                  </div>
                </div>
                <div
                  class="blank-space diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WidgetDiff renders with missing 'before' props 1`] = `
<div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-header"
  >
    Radio
  </div>
  <div
    class="diff-body ui-helper-clearfix"
  >
    <div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              type: 
              <span
                class="inner-value dark added dark"
              >
                "radio"
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              graded: 
              <span
                class="inner-value dark added dark"
              >
                true
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              version: 
              <span
                class="inner-value dark added dark"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="blank-space diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
            <div
              class="added dark diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                major: 
                <span
                  class="inner-value dark added dark"
                >
                  0
                </span>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="blank-space diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
            <div
              class="added dark diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                minor: 
                <span
                  class="inner-value dark added dark"
                >
                  0
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              static: 
              <span
                class="inner-value dark added dark"
              >
                false
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              alignment: 
              <span
                class="inner-value dark added dark"
              >
                "default"
              </span>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="clear: both;"
        >
          <div
            class="blank-space diff-row before"
          >
            <div
              style="padding-inline-start: 0;"
            >
              <span
                class="inner-value dark blank-space"
              />
            </div>
          </div>
          <div
            class="added dark diff-row after"
          >
            <div
              style="padding-inline-start: 0;"
            >
              options: 
              <span
                class="inner-value dark added dark"
              />
            </div>
          </div>
        </div>
        <div>
          <div
            style="clear: both;"
          >
            <div
              class="blank-space diff-row before"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                <span
                  class="inner-value dark blank-space"
                />
              </div>
            </div>
            <div
              class="added dark diff-row after"
            >
              <div
                style="padding-inline-start: 20px;"
              >
                choices: 
                <span
                  class="inner-value dark added dark"
                />
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  0: 
                  <span
                    class="inner-value dark added dark"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    id: 
                    <span
                      class="inner-value dark added dark"
                    >
                      "0-0-0-0-0"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    content: 
                    <span
                      class="inner-value dark added dark"
                    >
                      "$45$"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    correct: 
                    <span
                      class="inner-value dark added dark"
                    >
                      false
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              style="clear: both;"
            >
              <div
                class="blank-space diff-row before"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  <span
                    class="inner-value dark blank-space"
                  />
                </div>
              </div>
              <div
                class="added dark diff-row after"
              >
                <div
                  style="padding-inline-start: 40px;"
                >
                  1: 
                  <span
                    class="inner-value dark added dark"
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    id: 
                    <span
                      class="inner-value dark added dark"
                    >
                      "1-1-1-1-1"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    content: 
                    <span
                      class="inner-value dark added dark"
                    >
                      "$15$"
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                style="clear: both;"
              >
                <div
                  class="blank-space diff-row before"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    <span
                      class="inner-value dark blank-space"
                    />
                  </div>
                </div>
                <div
                  class="added dark diff-row after"
                >
                  <div
                    style="padding-inline-start: 60px;"
                  >
                    correct: 
                    <span
                      class="inner-value dark added dark"
                    >
                      true
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
